2014-05-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Fix unknown graphs in graphs
	with only negative values. Now the unknown graph is always positive
	Ticket: #569 

2014-05-22  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/servers/manage_recontask.php
	  operation/servers/recon_view.php: Added tabs.

2014-05-21  Sergio Martin <sergio.martin@artica.es>

	* general/main_menu.php
	godmode/setup/setup_visuals.php
	include/styles/pandora.css
	include/functions_config.php: Added autohidden menu
	feature

2014-05-21  Vanessa Gil <vanessa.gil@artica.es>

	* images/dot_blue.png
	  images/dot_white.png
	  images/dot_yellow.png
	  operation/agentes/estado_monitores.php
	  operation/agentes/status_monitor.php: Changed images.


2014-05-21  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/configurar_agente.php,
	godmode/agentes/module_manager_editor.php,
	godmode/agentes/module_manager_editor_common.php,
	pandoradb.sql, pandoradb.oracle.sql, pandoradb.postgreSQL.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql: Improved
	'FF threshold' to be able to define each state changing.

2014-05-20  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/gis_maps/configure_gis_map.php: Fixed
	typographic error.

2014-05-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_api.php: Fixed the function
	"get_events_with_user". Fixed the json output format.

2014-05-20  Vanessa Gil <vanessa.gil@artica.es>

	* operation/events/events.build_query.php
	  operation/events/events.php
	  operation/events/events_list.php: Added filters
	to event list.

2014-05-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* pandora_console/include/styles/pandora.css: Changed
	the name of the class "transparent" for "alpha50".

	* pandora_console/godmode/agentes/module_manager_editor_common.php: